--- a/src/app/compnents/contact-us/contact-us.component.css
+++ b/src/app/compnents/contact-us/contact-us.component.css
@@ -42,7 +42,11 @@ input , textarea{
     background-color: #B9F1C3;
     border: 1px solid #1C593A;
 }
-
+.submit-btn:disabled {
+    background-color: #ccc;  
+    cursor: not-allowed;
+    opacity: 0.6;            
+}
 .submit-btn:hover {
     background-color: #79BA91; 
     color: #1C593A; 
