--- a/src/app/compnents/passer-commande/passer-commande.component.css
+++ b/src/app/compnents/passer-commande/passer-commande.component.css
@@ -43,7 +43,11 @@ input{
     border: 1px solid #1C593A;
     width: 100%;
 }
-
+.submit-btn:disabled {
+    background-color: #ccc;  
+    cursor: not-allowed;
+    opacity: 0.6;            
+}
 .submit-btn:hover {
     background-color: #79BA91; 
     color: #1C593A; 
